# Job-Fetcher

./: .gitignore  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
src/job_fetcher/: __init__.py  boards.py  cli.py  fetchers.py  filtering.py  models.py  pipeline.py  server.py
src/job_fetcher/static/: index.html
tests/: test_job_fetcher.py
